First CSS commit
Added style to header

--- a/index.html
+++ b/index.html
@@ -8,15 +8,21 @@
     <title>Custom Website</title>
 </head>
 <body>
-    <header>
+
+    <!-- This is Header Section. -->
+
+    <header class="header-section">
         <img src="images/logo.png" alt="Logo" class="logo">
-        <nav>
+        <nav class="nav-bar">
             <a href="index.html" class="nav-menu">Home</a>
             <a href="pages/blogs.html" class="nav-menu">Blog</a>
             <a href="pages/about.html" class="nav-menu">About Us</a>
             <a href="pages/contact.html" class="nav-menu">Contact Us</a>
         </nav>
     </header>
+
+    <!-- This is main section. -->
+
     <main>
         <section>
 
