New update to site
Added new hero image
Added contact us form
added new logo

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- This is Header Section. -->
 
     <header class="header-section">
-        <img src="images/logo.png" alt="Logo" class="logo">
+        <img src="images/logo2.png" alt="Logo" class="logo">
         <nav class="nav-bar">
             <a href="index.html" class="nav-menu">Home</a>
             <a href="pages/blogs.html" class="nav-menu">Blog</a>
@@ -29,9 +29,17 @@
             <p class="desc">Design helps shape our everyday interactions through products, furniture, objects, or experiences.</p>
             <button class="cta">
                 Shop Now
-            </button>            
+            </button>    
         </section>
-        <!-- <img class="banner" src="images/sofa.jpg" alt="Sofa"> -->
+        <section class="form">
+            <h2>Contact us for more details - </h2>
+            <label for="name" class="labels">Name</label><br><input type="text" class="name"><br><br>
+            <label for="email" class="labels">Email Address</label><br><input type="email" placeholder="Enter email" required class="email"><br><br>
+            <label for="phone" class="labels">Phone Number</label><br><input type="tel" class="phone"><br><br>
+            <label for="more" class="labels">Additional details</label><br><textarea name="more" id="" cols="30" rows="10" placeholder="Tell us a little about the project..."></textarea><br><br>
+            <input type="submit" name="Submit" class="submit">
+        </section>
+        
     </main>
     <!-- This is the Footer Section -->
     <footer>
